# python-project-rates-api

./: .env.example  .flake8  .pre-commit-config.yaml  Makefile  README.md  compose.yaml  database.sql  pyproject.toml
docker-images/backend/: .dockerignore  .env.default  Dockerfile
docker-images/postgres/: .env.default  Dockerfile  dump.sql
rates_api/: app.py
rates_api/utils/: dates_handlers.py  db.py
tests/: conftest.py  test_app.py
tests/fixtures/: expected_jsons.py
tests/utils/: test_dates_handlers.py  test_db.py
